--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -3,8 +3,8 @@ name: LLM Nightly Build & Release
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  # schedule:
-  #   - cron: '*/5 * * * *' # GMT time, 6:50 GMT == 12:50 China
+  schedule:
+    - cron: '*/5 * * * *' # GMT time, 6:50 GMT == 12:50 China
   workflow_dispatch:
     inputs:
       pypi-version:
