--- a/.github/workflows/build-pypi-package.yml
+++ b/.github/workflows/build-pypi-package.yml
@@ -148,7 +148,7 @@ jobs:
 
   release-bigdl-core-xe:
     runs-on: ubuntu-latest
-    if: ${{ ( github.event.schedule && inputs.release-bigdl-core-xe ) || ( github.event_name == 'workflow_dispatch' && inputs.release-bigdl-core-xe )) || ((github.event_name == 'push' || github.event_name == 'pull_request') && needs.paths-filter.outputs.xe == 'true') }} 
+    if: ${{ ( github.event.schedule && inputs.release-bigdl-core-xe ) || ( github.event_name == 'workflow_dispatch' && inputs.release-bigdl-core-xe ) || ((github.event_name == 'push' || github.event_name == 'pull_request') && needs.paths-filter.outputs.xe == 'true') }} 
     strategy:
       fail-fast: false
       matrix:
