--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -26,3 +26,13 @@ jobs:
       release-bigdl-core-xe-batch-win: true
       release-bigdl-core-xe-addons-for-linux-and-windows: true
 
+  trigger-bigdl-core-xxx-for-py310:
+    uses: ./.github/workflows/build-pypi-package.yml
+    with:
+      python-version: '3.11'
+      pypi-version: ${{ (github.event_name == 'schedule') && '' || ( github.event_name == 'workflow_dispatch' ) && inputs.pypi-version }}
+      release-bigdl-core-xe: true
+      release-bigdl-core-xe-win: true
+      release-bigdl-core-xe-batch: true
+      release-bigdl-core-xe-batch-win: true
+      release-bigdl-core-xe-addons-for-linux-and-windows: true
